# legal-assistant

./: .env  .gitignore  ASKE.md  README.md  article_summary_pipeline.py  aske_pipeline.py  case_law_init.py  case_law_pipeline.py  chapter_summary_pipeline.py  compliance_questions.json  config.py  docker-compose.yml  graph_init.py  graph_rag.py  mappatura_domande_chapter.txt  pipeline.py  pyproject.toml  query.py  questions_resources_mapping.xlsx  rag_pipeline.py  requirements.txt  topic.json
.claude/: CLAUDE.md  Evaluation.md  graph_validation.md
corpus/: 32022R0868.html
docs/: 32016R0679.html  32023R2854.html  32024R1689.html  AI_ACT.html  Data Act.html  Data Governance Act.html  GDPR.html  architecture.md  extending.md  golden_dataset.json  knowledge-graph.md
evals/: act_classification_eval.py  backfill_attribution.py  evals.py  evals_ragas.py  obligation_role_recall.py  retrieval_eval.py
frontend/: app.py  aske_pipeline.py  case_law_parser.py  graph_construction.py  rag_chat.py
frontend/chat/: chat.py
frontend/evaluation/: evaluation.py
frontend/kg/: aske_pipeline.py  case_law_parser.py  graph_init.py
frontend/utils/: streamlit_log_handler.py
model/: blank_model.json
results/: aske_concepts_output.txt  aske_result.json  best_result.json  case_law_result.txt  rag_result.json  rag_results-1.txt  rag_results-2.txt  rag_results.txt
results/v1/: elements.json
results/v2/: elements.json
results/v3/: elements.json
results/v4/: elements.json
service/: csv_parser.py  eurlex_exporter.py  graph.py  graph_loader.py  iterator.py
tests/: conftest.py
(+166 files in other folders)
